testsuite/poke.pkl/struct-method-diag-13.pk
/* { dg-do compile } */

type Foo =
  struct
  {
    method foo = void: {}

    type Bar =
      struct
      {
        method bar = void:
        {
          foo; /* { dg-error "method.*not in this struct" } */
        }
      };
  };
